--- a/src/app/appliances/appliances.component.css
+++ b/src/app/appliances/appliances.component.css
@@ -1,43 +1,29 @@
+@media (min-width: 820px)
+{
 .sidenav-container {
   height: 100%;
 }
+
 .sidenav{
   width: fit-content;
   width: 280px;
   background-color: #EAE2B7;
 }
+
 .mat-sidenav-content{
    height: 910px;
    background-color: white;
 }
+
 .mat-toolbar{
   background-color: #D62828;
   width: 100%;
 }
+
 .logo{
-  width: 180px;
-  height: 150px;
-  padding-top: 40px;
-  margin-left: 55px;
-}
-
-.dashtitle
-{
-  color: #003049;
-  font-size: 25px;
-  margin-left: 80px;
-  margin-top: 60px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-
-
-.dashvector
-{
-  width: 360px;
-  height: 250px;
-  margin-left: 620px;
-  margin-top: -60px;
+  width: 60%;
+  height: 18%;
+  margin-left: 60px;
 }
 
 .nav-icon{
@@ -104,6 +90,7 @@
 .profileside:hover
 {
     background-color: #c8c19c;
+    
     width: 100%;
     height: 70px;
     margin-left: 0;
@@ -119,22 +106,101 @@
   margin-left: 25px;
 }
 
+.logoutside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.logoutside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.logout-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
 .spacer{
   flex: 1 1 auto;
 }
-.inboxicon
+.dashtitle
+{
+  color: #003049;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-left: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.services
+{
+  color: #003049;
+  font-size: 20px;
+  margin-left: 60px;
+  margin-top: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.datetime
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #003049;
+  font-size: 18px;
+  float: left;
+  margin-left: 60px;
+  margin-top: 5px;
+}
+
+
+.ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 30px;
+  margin-left: 10px;
+  color: #FFFFFF;
+}
+
+.welcome
+{
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+float: right;
+margin-right: 250px;
+font-size: 18px;
+margin-top: 3px;
+color: #FFFFFF;
+}
+
+.logouticon
 {
   font-size: 30px;
-  color: #14213D;
-  margin-right: 20px;
+  float: right;
+  margin-right: 80px;
+  margin-top: -5px;
+  color: #FFFFFF;
 }
+
 .logoutBtn
 {
-  font-size: 20px;
-  color: antiquewhite;
+  font-size: 18px;
+  color: #FFFFFF;
 }
-.logoutBtn:hover{
-  background-color: black;
+.logoutxt
+{
+  font-size: 17px;
+  color: #FFFFFF;
+  margin-top: -30px;
+  float: right;
+  margin-right: -70px;
 }
 
 .h1title
@@ -142,9 +208,10 @@
   font-family: 'Trebuchet MS';
   font-size: 25px;
   color: #14213D;
-  margin-top: 100px;
+  margin-top: 150px;
   text-align: center;
 }
+
 .allservices{
   display: flex;
   justify-content: center;
@@ -215,4 +282,116 @@
   font-size: 18px;
   text-align: center;
   margin-top: -10px;
+}
+}
+
+@media (max-width: 576px)
+{
+  .logo{
+    width: 65%;
+    height: 15%;
+    padding-top: 10px;
+    margin-left: 30px;
+  }
+
+  .mat-toolbar{
+    background-color: #D62828;
+    width: 100%;
+  }
+
+  .ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 20px;
+  position: center;
+  color: #FFFFFF;
+}
+
+.h1title
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  color: #14213D;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.airconcard
+{
+  float: left;
+  margin-left: 70px;
+  height: 30%;
+  width: 30%;
+    
+}
+
+.aircontxt{
+  font-family: 'Trebuchet MS';
+  font-size: 13px;
+  text-align: center;
+  margin-top: -10px;
+}
+
+.refcard
+{
+  float: left;
+  margin-left: 10px;
+  height: 30%;
+  width: 30%;
+}
+
+
+.reftxt{
+  font-family: 'Trebuchet MS';
+  font-size: 13px;
+  text-align: center;
+  margin-top: -10px;
+}
+
+.fancard
+{
+  float: right;
+  margin-right: 70px;
+  margin-top: 10px;
+  height: 30%;
+  width: 30%;
+}
+
+.fantxt{
+  font-family: 'Trebuchet MS';
+  font-size: 13px;
+  text-align: center;
+  margin-top: -10px;
+  
+}
+.washingcard
+{
+  float: left;
+  margin-left: 70px;
+  margin-top: 10px;
+  height: 30%;
+  width: 30%;
+}
+
+.washingtxt{
+  font-family: 'Trebuchet MS';
+  font-size: 10px;
+  text-align: center;
+  margin-top: -10px;
+}
+.tvcard
+{
+  float: left;
+  margin-left: 130px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  height: 30%;
+  width: 30%;
+}
+.tvtxt{
+  font-family: 'Trebuchet MS';
+  font-size: 13px;
+  text-align: center;
+  margin-top: -10px;
+}
 }
