--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,5 @@
-
+@media (min-width: 820px)
+{
 .sidenav-container {
   height: 100%;
 }
@@ -20,10 +21,9 @@
 }
 
 .logo{
-  width: 180px;
-  height: 150px;
-  padding-top: 40px;
-  margin-left: 55px;
+  width: 60%;
+  height: 18%;
+  margin-left: 60px;
 }
 
 .nav-icon{
@@ -105,6 +105,32 @@
   font-size: 18px;
   margin-left: 25px;
 }
+
+.logoutside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.logoutside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.logout-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
 .spacer{
   flex: 1 1 auto;
 }
@@ -130,15 +156,12 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #003049;
   font-size: 18px;
-  float: right;
-  margin-top: -40px;
+  float: left;
+  margin-left: 60px;
+  margin-top: 5px;
 }
 
-.tab{
-  margin-top: 40px;
-  margin-left: 50px;
-  width: fit-content;
-}
+
 .ayosgamit
 {
   font-family: 'Candara';
@@ -150,17 +173,11 @@
 .welcome
 {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+float: right;
+margin-right: 250px;
 font-size: 18px;
 margin-top: 3px;
 color: #FFFFFF;
-}
-
-.accounticon
-{
-  font-size: 38px;
-  margin-top: -10px;
-  margin-right: 15px;
-  color: #FFFFFF;
 }
 
 .logouticon
@@ -186,119 +203,43 @@ color: #FFFFFF;
   margin-right: -70px;
 }
 
-.appliancescard
-{
-    margin-top: 100px;
-    margin-left: 320px;
-    width: 200px;
-    height: 200px;
+
+
+.dashvector
+{ 
+  width: 40%;
+  height: 40%;
+  float: right;
+  margin-right: 100px;
 }
 
-.applianceimg
-{
-margin-left: 30px;
-margin-top: 20px;
-width: 220px;
-height: 200px;
-border-radius: 20px;
-}
-
-.electricalimg
-{
-margin-left: 60px;
-margin-top: 20px;
-width: 220px;
-height: 200px;
-border-radius: 20px;
-}
-
-.cleaningimg
-{
-margin-left: 70px;
-margin-top: 20px;
-width: 220px;
-height: 200px;
-border-radius: 20px;
-}
-
-.servicescard
-{
-  margin-top: 30px;
-  margin-left: 90px;
+.tab{
+  margin-top: 20px;
+  float: left;
+  margin-left: 50px;
   width: fit-content;
-  height: 250px;
-}
-
-.servappliances
-{
-  font-size: 15px;
-  color: #14213D;
-  margin-left: 70px;
-  margin-top:-10px;
-}
-
-.servelectrical
-{
-  font-size: 15px;
-  color: #14213D;
-  margin-left: 320px;
-  margin-top:-25px;
-}
-
-.servcleaning
-{
-  font-size: 15px;
-  color: #14213D;
-  margin-left: 620px;
-  margin-top:-27px;
 }
 
 .pendingcard
 {
-  margin-left: 20px;
-  margin-top: 15px;
-  width: 850px;
-  height: fit-content;
-  border: 2px solid #E5E5E5;
+  width: 1100px;
+  height: 350px;
+  border: solid 1px grey;
 }
+
 .searchfield
 {
-  height: 30px;
-  width: 300px;
+  height: 10%;
+  width: 30%;
   font-family: 'Trebuchet MS';
   float: right;
-  margin-top: -70px;
+  margin-top: -25px;
 }
 
-.completedcard
+.request
 {
-  margin-left: 20px;
-  margin-top: 15px;
-  width: 850px;
-  height: fit-content;
-  border: 2px solid #E5E5E5;
-}
-
-.cancelledcard
-{
-  margin-left: 20px;
-  margin-top: 15px;
-  width: 850px;
-  height: fit-content;
-  border: 2px solid #E5E5E5;
-}
-
-.detailsBtn
-{
-  margin-top: -30px;
-  background-color: #FCA311;
-  width: 80px;
-  font-size: 10px;
-  height: 30px;
-}
-.request{
   padding: 10px;
-  font-size: 22px;
+  font-size: 15px;
 }
 .container{
   width: fit-content;
@@ -327,4 +268,114 @@ border-radius: 20px;
 .card_image{
   width: 200px;
   height: 150px;
+}
+}
+
+@media (max-width: 576px)
+{
+  .logo{
+    width: 65%;
+    height: 15%;
+    padding-top: 10px;
+    margin-left: 30px;
+  }
+
+  .mat-toolbar{
+    background-color: #D62828;
+    width: 100%;
+  }
+
+  .ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 20px;
+  position: center;
+  color: #FFFFFF;
+}
+
+.dashtitle
+{
+  color: #003049;
+  font-size: 20px;
+  margin-top: 40px;
+  float: left;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.welcome
+{
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 13px;
+float: right;
+margin-left: 65px;
+margin-top: 1px;
+color: #FFFFFF;
+}
+
+.datetime
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #003049;
+  font-size: 15px;
+  float: right;
+  margin: auto;
+  margin-top: 43px;
+}
+
+.dashvector
+{ 
+  width: 80%;
+  height: 80%;
+  margin-top: 40px;
+  margin-left: 35px;
+}
+
+.tab{
+  margin-top: 50px;
+  margin-left: 10px;
+  width: 100%;
+}
+
+.pendingcard
+{
+ 
+  margin-top: 15px;
+  width: 400px;
+  height: 250px;
+  border: 2px solid #E5E5E5;
+}
+.searchfield
+{
+  height: 10%;
+  width: 30%;
+  font-family: 'Trebuchet MS';
+  float: right;
+  margin-right: 30px;
+  margin-top: -50px;
+  
+}
+
+.request
+{
+  padding: 10px;
+  font-size: 15px;
+}
+.completedcard
+{
+  margin-left: 20px;
+  margin-top: 15px;
+  width: 850px;
+  height: fit-content;
+  border: 2px solid #E5E5E5;
+}
+
+.cancelledcard
+{
+  margin-left: 20px;
+  margin-top: 15px;
+  width: 850px;
+  height: fit-content;
+  border: 2px solid #E5E5E5;
+}
 }
