--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,28 +1,50 @@
-.homebg1
+@media (min-width: 820px)
 {
-    margin-top: 0;
-    width: 1000px;
-    height: 937px;
-    float: left;
-    margin-right: 0;
+    .container
+    {
+        background-image: url("../../assets/homebg.jpg");
+        background-repeat: no-repeat;
+        background-size: cover !important;
+        background-attachment: fixed;
+        width: 100%;
+        height: 100%;
+    }
+
+    .logo
+    {
+        width: 10%;
+        height: 10%;
+        float: left !important;
+        margin-left: 100px;
+        margin-top: 20px;
+    }
+
+    
+.content
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 30px;
     
     
+    margin-top: 250px;
 }
 
-.logo
+.title1
 {
-    width: 200px;
-    height: 190px;
-    float: right;
-    margin-right: 390px;
-    margin-top: 100px;
+    margin-top: -40px;
+}
+
+.title2
+{
+    margin-top: -40px;
 }
 
 .menu
 {
     float: left;
-    margin-left: -850px;
-    margin-top: 60px;
+    margin-left: 50px;
+    margin-top: 80px;
 }
 
 .servicesBtn
@@ -48,114 +70,16 @@
     font-size: 17px;
 }
 
-.content
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 37px;
-    float: left;
-    margin-left: -850px;
-    margin-top: 330px;
 }
 
-.title1
-{
-    margin-top: -40px;
-}
 
-.title2
+@media (max-width: 576px)
 {
-    margin-top: -40px;
-}
-
-.loginTabs
-{
-    float: right;
-    margin-right: 330px; 
-    margin-top: 50px;
-}
-
-.mat-tab-group
-{
-    width: 320px;
-    margin-left: 100px;
-}
-
-.login-emailfield
-{
-    min-height: 40px;
-    width: 300px;
-    margin-top: 40px;
-    margin-left: 10px;
-    border-color: #FCA311, 3px;
-}
-.login-passfield 
-{
-    padding: 0;
-    width: 300px;
-    margin-top: 1px;
-    margin-left: 10px;
-    border: #FCA311;
-}
-
-.loginBtn
-{
-    background-color: #D62828;
-    color: #FFFFFF;
-    height: 40px;
-    width: 180px;
-    margin-top: 10px;
-    margin-left: 70px;
-    border-radius: 5px;
-}
-
-.signup-fnamefield
-{
-    min-height: 40px;
-    width: 300px;
-    margin-left: 10px;
-    margin-top: 40px;
-}
-.signup-lnamefield
-{
-    min-height: 40px;
-    width: 300px;
-    margin-left: 10px;
-}
-.signup-emailfield
-{
-    min-height: 40px;
-    width: 300px;
-    margin-left: 10px;
-    border: #FCA311, 3px;
-}
-.signup-passfield 
-{
-    min-height: 40px;
-    width: 300px;
-    margin-left: 10px;
-    border: #FCA311;
-}
-
-.signupBtn
-{
-    background-color: #D62828;
-    color: #FFFFFF;
-    height: 40px;
-    width: 180px;
-    margin-left: 70px;
-}
-
-.signupTab
-{
-    margin-left: 150px;
-}
-
-.inquireBtn
-{
-    background-color: #FFFFFF;
-    text-decoration: none;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    color: #D62828;
+    .backgroundimg
+    {
+        background-image: url("../../assets/mobilebg.jpg") !important;
+        background-repeat: no-repeat;
+         width: 100%;
+        height: 100%;
+    }
 }
