--- a/src/app/aircon-install/aircon-install.component.css
+++ b/src/app/aircon-install/aircon-install.component.css
@@ -1,42 +1,29 @@
+@media (min-width: 820px)
+{
 .sidenav-container {
   height: 100%;
 }
+
 .sidenav{
   width: fit-content;
   width: 280px;
   background-color: #EAE2B7;
 }
+
 .mat-sidenav-content{
    height: 910px;
    background-color: white;
 }
+
 .mat-toolbar{
   background-color: #D62828;
   width: 100%;
 }
+
 .logo{
-  width: 180px;
-  height: 150px;
-  padding-top: 40px;
-  margin-left: 55px;
-}
-
-.dashtitle
-{
-  color: #003049;
-  font-size: 25px;
-  margin-left: 80px;
-  margin-top: 60px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-
-.dashvector
-{
-  width: 360px;
-  height: 250px;
-  margin-left: 620px;
-  margin-top: -60px;
+  width: 60%;
+  height: 18%;
+  margin-left: 60px;
 }
 
 .nav-icon{
@@ -103,6 +90,7 @@
 .profileside:hover
 {
     background-color: #c8c19c;
+    
     width: 100%;
     height: 70px;
     margin-left: 0;
@@ -118,22 +106,101 @@
   margin-left: 25px;
 }
 
+.logoutside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.logoutside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.logout-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
 .spacer{
   flex: 1 1 auto;
 }
-.inboxicon
+.dashtitle
+{
+  color: #003049;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-left: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.services
+{
+  color: #003049;
+  font-size: 20px;
+  margin-left: 60px;
+  margin-top: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.datetime
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #003049;
+  font-size: 18px;
+  float: left;
+  margin-left: 60px;
+  margin-top: 5px;
+}
+
+
+.ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 30px;
+  margin-left: 10px;
+  color: #FFFFFF;
+}
+
+.welcome
+{
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+float: right;
+margin-right: 250px;
+font-size: 18px;
+margin-top: 3px;
+color: #FFFFFF;
+}
+
+.logouticon
 {
   font-size: 30px;
-  color: #14213D;
-  margin-right: 20px;
+  float: right;
+  margin-right: 80px;
+  margin-top: -5px;
+  color: #FFFFFF;
 }
+
 .logoutBtn
 {
-  font-size: 20px;
-  color: antiquewhite;
+  font-size: 18px;
+  color: #FFFFFF;
 }
-.logoutBtn:hover{
-  background-color: black;
+.logoutxt
+{
+  font-size: 17px;
+  color: #FFFFFF;
+  margin-top: -30px;
+  float: right;
+  margin-right: -70px;
 }
   .stepper
   {
@@ -581,3 +648,141 @@
     width: 500px;
 }
 
+}
+
+@media (max-width: 576px)
+{
+  .logo{
+    width: 65%;
+    height: 15%;
+    padding-top: 10px;
+    margin-left: 30px;
+  }
+
+  .mat-toolbar{
+    background-color: #D62828;
+    width: 100%;
+  }
+
+  .ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 20px;
+  position: center;
+  color: #FFFFFF;
+}
+
+
+.unitdetailscard
+  {
+    margin: auto;
+    margin-top: 70px;
+    width: fit-content;
+    height: fit-content;
+  }
+
+.unitdetails{
+  color: #14213D;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.locationcard
+{
+  margin: auto;
+  margin-top: 70px;
+  width: fit-content;
+  height: fit-content;
+}
+
+.servicelocation
+  {
+    color: #14213D;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .servicesched
+  {
+  color: #14213D;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .timeslots
+  {
+    margin-top: 35px;
+  }
+  .timeslot
+  {
+  color: #14213D;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  .h1technicians
+  {
+   font-size: 12px;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   color: #14213D;
+  }
+
+  .contactdetails
+  {
+    color: #14213D;
+    font-size: 18px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .h1address
+  {
+    color: #14213D;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .nextBtn
+  {
+    font-size: 18px;
+    font-family: 'Trebuchet MS';
+    background-color: #D62828;
+    color: #FFFFFF;
+    width: 100px;
+    height: 50px;
+    margin-top: 25px;
+    float: right;
+  }
+  .backBtn
+  {
+    font-size: 18px;
+    font-family: 'Trebuchet MS';
+    background-color: #D62828;
+    color: #FFFFFF;
+    width: 100px;
+    height: 50px;
+    margin-top: 25px;
+    float: left;
+  }
+  .CDbackBtn
+  {
+    margin-top: 30px;
+    font-size: 18px;
+    font-family: 'Trebuchet MS';
+    background-color: #D62828;
+    color: #FFFFFF;
+    width: 100px;
+    height: 50px;
+    float: left;
+  }
+  .doneBtn
+  {
+    margin-top: 30px;
+    font-size: 18px;
+    font-family: 'Trebuchet MS';
+    background-color: #FCA311;
+    color: #14213D;
+    width: 100px;
+    height: 50px;
+    float: right;
+  }
+
+}
