--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -174,7 +174,7 @@
 {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 float: right;
-margin-right: 250px;
+/* margin-right: 250px; */
 font-size: 18px;
 margin-top: 3px;
 color: #FFFFFF;
@@ -305,12 +305,11 @@ color: #FFFFFF;
 
 .welcome
 {
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 13px;
-float: right;
-margin-left: 65px;
-margin-top: 1px;
-color: #FFFFFF;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 13px;
+  margin-left: auto;
+  margin-top: 1px;
+  color: #FFFFFF;
 }
 
 .datetime
