--- a/src/app/televisiondetails/televisiondetails.component.html
+++ b/src/app/televisiondetails/televisiondetails.component.html
@@ -26,10 +26,12 @@
           <a class="profile-btn" routerLink="/profile">Profile</a>
         </mat-list-item>
       </div>
-      <!-- <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">credit_card</mat-icon>
-          <a class="nav-btn" routerLink="/payment">Payment</a>
-        </mat-list-item> -->
+      <div class="logoutside">
+        <mat-list-item (click)="closeSideNav()">
+          <mat-icon class="nav-icon">exit_to_app</mat-icon>
+          <a class="logout-btn" routerLink="/home">Logout</a>
+        </mat-list-item>
+      </div>
     </mat-nav-list>
   </mat-sidenav>
 
