--- a/src/app/washingmachine-install/washingmachine-install.component.css
+++ b/src/app/washingmachine-install/washingmachine-install.component.css
@@ -1,122 +1,208 @@
+
+@media (min-width: 820px)
+{
 .sidenav-container {
-    height: 100%;
-  }
-  .sidenav{
-    width: fit-content;
-    width: 280px;
-    background-color: #EAE2B7;
-  }
-  .mat-sidenav-content{
-     height: 910px;
-     background-color: white;
-  }
-  .mat-toolbar{
-    background-color: #D62828;
+  height: 100%;
+}
+
+.sidenav{
+  width: fit-content;
+  width: 280px;
+  background-color: #EAE2B7;
+}
+
+.mat-sidenav-content{
+   height: 910px;
+   background-color: white;
+}
+
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+
+.logo{
+  width: 60%;
+  height: 18%;
+  margin-left: 60px;
+}
+
+.nav-icon{
+  color: #003049;
+  font-size: 35px;
+  margin-left: 25px;
+  margin-top: -12px;
+}
+
+.dashboardside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    
     width: 100%;
-  }
-  .logo{
-    width: 180px;
-    height: 150px;
-    padding-top: 40px;
-    margin-left: 55px;
-  }
-  
-  .dashtitle
-  {
-    color: #003049;
-    font-size: 25px;
-    margin-left: 80px;
-    margin-top: 60px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
-  }
-  
-  .dashvector
-  {
-    width: 360px;
-    height: 250px;
-    margin-left: 620px;
-    margin-top: -60px;
-  }
-  
-  .nav-icon{
-    color: #003049;
-    font-size: 35px;
-    margin-left: 25px;
-    margin-top: -12px;
-  }
-  
-  .dashboardside{
-    margin-left: 0px;
-    margin-top: 30px;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
     text-align: justify;
-  }
-  
-  .dashboardside:hover
-  {
-      background-color: #c8c19c;
-      
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .dashboard-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-    text-decoration: none;
-  }
-  
-  .bookingside{
-    margin-left: 0px;
-    margin-top: 30px;
+}
+
+.dashboard-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+  text-decoration: none;
+}
+
+.bookingside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
     text-align: justify;
-  }
-  
-  .bookingside:hover
-  {
-      background-color: #c8c19c;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .booking-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-  }
-  
-  .profileside{
-    margin-left: 0px;
-    margin-top: 30px;
+}
+
+.booking-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.profileside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
     text-align: justify;
-  }
-  
-  .profileside:hover
-  {
-      background-color: #c8c19c;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .profile-btn
-  {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-  }
+}
+
+.profile-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.logoutside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.logoutside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.logout-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.spacer{
+  flex: 1 1 auto;
+}
+.dashtitle
+{
+  color: #003049;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-left: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.services
+{
+  color: #003049;
+  font-size: 20px;
+  margin-left: 60px;
+  margin-top: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.datetime
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #003049;
+  font-size: 18px;
+  float: left;
+  margin-left: 60px;
+  margin-top: 5px;
+}
+
+
+.ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 30px;
+  margin-left: 10px;
+  color: #FFFFFF;
+}
+
+.welcome
+{
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+float: right;
+margin-right: 250px;
+font-size: 18px;
+margin-top: 3px;
+color: #FFFFFF;
+}
+
+.logouticon
+{
+  font-size: 30px;
+  float: right;
+  margin-right: 80px;
+  margin-top: -5px;
+  color: #FFFFFF;
+}
+
+.logoutBtn
+{
+  font-size: 18px;
+  color: #FFFFFF;
+}
+.logoutxt
+{
+  font-size: 17px;
+  color: #FFFFFF;
+  margin-top: -30px;
+  float: right;
+  margin-right: -70px;
+}
   .stepper
   {
     margin: auto;
@@ -146,7 +232,8 @@
     margin-top: 25px;
     float: left;
   }
-  .unitdetailscard{
+  .unitdetailscard
+  {
     margin: auto;
     margin-top: 40px;
     width: 800px;
@@ -159,6 +246,8 @@
     width: 800px;
     height: 200px;
   }
+  
+  
   .cityselect
   {
     margin-left: 40px;
@@ -172,12 +261,11 @@
     margin-top: 10px;
     font-family: 'Trebuchet MS';
   }
-
   .locationicon
   {
-    margin-top: 10px;
     color: #14213D;
     font-size: 35px;
+    margin: auto;
   }
   .unitdetails{
     color: #14213D;
@@ -395,7 +483,7 @@
   {
     margin-top: 10px;
     color: #14213D;
-    font-size: 35px;
+    font-size: 30px;
   }
   
   .detailssummary
@@ -403,7 +491,7 @@
     color: #14213D;
     margin-top: -33px;
     margin-left: 50px;
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Trebuchet MS';
   }
   
@@ -441,38 +529,6 @@
     height: 52px;
     font-size: 18px;
     font-family: 'Trebuchet MS';
-  }
-  
-  .airconcard
-  {
-    margin-top: 100px;
-    margin-left: 250px;
-    width: 200px;
-    height: 200px;
-  }
-  
-  .refcard
-  {
-    margin-top: -235px;
-    margin-left: 500px;
-    width: 200px;
-    height: 200px;
-  }
-  
-  .efancard
-  {
-    margin-top: -235px;
-    margin-left: 760px;
-    width: 200px;
-    height: 200px;
-  }
-  
-  .washingcard
-  {
-    margin-top: -230px;
-    margin-left: 1015px;
-    width: 200px;
-    height: 200px;
   }
   
   .timeslots
@@ -520,33 +576,171 @@
     flex: 50%;
     padding: 10px;
   }
-.washingmachineselect
-{
-    margin-left: 40px;
-    margin-top: 10px;
-    font-family: 'Trebuchet MS';
-}
-.washingmachinebrand
-{
-    margin-left: 40px;
-    margin-top: 10px;
-    font-family: 'Trebuchet MS';
+  .washingmachineselect
+  {
+      margin-left: 40px;
+      margin-top: 10px;
+      font-family: 'Trebuchet MS';
+  }
+  .washingmachinebrand
+  {
+      margin-left: 40px;
+      margin-top: 10px;
+      font-family: 'Trebuchet MS';
+  }
+  
+  .washingmachineprob
+  {
+      width: 690px;
+      margin-left: 40px;
+      margin-top: 10px;
+      font-family: 'Trebuchet MS';
+  }
+  .addunit{
+      font-family: 'Trebuchet MS';
+      border-color: #FCA311;
+      color: #14213D;
+      font-size: 18px;
+      margin-left: 140px;
+      margin-top: 20px;
+      height: 50px;
+      width: 500px;
+  }
 }
 
-.washingmachineprob
+@media (max-width: 576px)
 {
-    width: 690px;
-    margin-left: 40px;
-    margin-top: 10px;
-    font-family: 'Trebuchet MS';
+  .logo{
+    width: 65%;
+    height: 15%;
+    padding-top: 10px;
+    margin-left: 30px;
+  }
+
+  .mat-toolbar{
+    background-color: #D62828;
+    width: 100%;
+  }
+
+  .ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 20px;
+  position: center;
+  color: #FFFFFF;
 }
-.addunit{
-    font-family: 'Trebuchet MS';
-    border-color: #FCA311;
+
+
+.unitdetailscard
+  {
+    margin: auto;
+    margin-top: 70px;
+    width: fit-content;
+    height: fit-content;
+  }
+
+.unitdetails{
+  color: #14213D;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.locationcard
+{
+  margin: auto;
+  margin-top: 70px;
+  width: fit-content;
+  height: fit-content;
+}
+
+.servicelocation
+  {
+    color: #14213D;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .servicesched
+  {
+  color: #14213D;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .timeslots
+  {
+    margin-top: 35px;
+  }
+  .timeslot
+  {
+  color: #14213D;
+  font-size: 18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  .h1technicians
+  {
+   font-size: 12px;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   color: #14213D;
+  }
+
+  .contactdetails
+  {
     color: #14213D;
     font-size: 18px;
-    margin-left: 140px;
-    margin-top: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .h1address
+  {
+    color: #14213D;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .nextBtn
+  {
+    font-size: 18px;
+    font-family: 'Trebuchet MS';
+    background-color: #D62828;
+    color: #FFFFFF;
+    width: 100px;
     height: 50px;
-    width: 500px;
+    margin-top: 25px;
+    float: right;
+  }
+  .backBtn
+  {
+    font-size: 18px;
+    font-family: 'Trebuchet MS';
+    background-color: #D62828;
+    color: #FFFFFF;
+    width: 100px;
+    height: 50px;
+    margin-top: 25px;
+    float: left;
+  }
+  .CDbackBtn
+  {
+    margin-top: 30px;
+    font-size: 18px;
+    font-family: 'Trebuchet MS';
+    background-color: #D62828;
+    color: #FFFFFF;
+    width: 100px;
+    height: 50px;
+    float: left;
+  }
+  .doneBtn
+  {
+    margin-top: 30px;
+    font-size: 18px;
+    font-family: 'Trebuchet MS';
+    background-color: #FCA311;
+    color: #14213D;
+    width: 100px;
+    height: 50px;
+    float: right;
+  }
+
 }
