--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,20 @@
+<body>
 
-<div class="container">
-  <h1>Rose image</h1>
-</div>
+  <div>
+      <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+  </div>
+  <div>
+      <button mat-button class="pricingBtn">Pricing</button>
+      <button mat-button class="contactUsBtn">Contact Us</button>
+      <button mat-button class="aboutusBtn">About Us</button>
+  </div>
+  <div class="content">
+      <h1 class="title1"><b>We provide the service</b></h1>
+      <h1 class="title2"><b>you need on your own home.</b></h1>
+  </div>
+
+  <div>
+      <button mat-raised-button class="bookBtn" routerLink="/loginform">Book a Service</button>
+      <button mat-raised-button class="inquireBtn">Inquire</button>
+  </div>
+</body>
