--- a/src/app/loginform/loginform.component.css
+++ b/src/app/loginform/loginform.component.css
@@ -4,22 +4,51 @@
     justify-content: center;
     align-items: center;
 }
-.logincard
-{  
-    border-radius: 40px;
-    margin-top: 750px;
-    min-height: 620px;
-    max-width: 500px;
-    background-color: #fffade;
-    opacity: 1;
-    position: absolute;
+
+.mat-toolbar{
+    background-color: #D62828;
+    width: 100%;
 }
+  
+.ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 30px;
+  margin-left: 10px;
+  color: #FFFFFF;
+}
+
+.signincard
+{
+    width: 70%;
+    height: 50%;
+    border-radius: 20px;
+    
+    background-color: #fffade;
+    justify-content: center;
+    opacity: 1;
+   
+}
+
+.mat-tab-group
+{
+    margin-top: 40px;
+    width: 30%;
+    text-align: center;
+   
+}
+
 .logo
 {
-    height: 20%;
-    width: 40%;
-    margin-left: 150px;
-    padding-top: 50px;
+    height: 10%;
+    width: 10%;
+    justify-content: center;
+    margin-left: 45%;
+    margin-right: 45%;
+    margin-top: 40px;
+   
+    
+   
 }
 .login-emailfield
 {
@@ -42,6 +71,7 @@
     min-height: 40px;
     width: 300px;
     margin-left: 10px;
+    margin-top: 50px;
 }
 .signup-lnamefield
 {
@@ -67,10 +97,9 @@
 {
     background-color: #D62828;
     color: #FFFFFF;
-    height: 40px;
-    width: 180px;
-    margin-top: 10px;
-    margin-left: 70px;
+    height: 10%;
+    width: 85%;
+    margin: auto;
     border-radius: 5px;
 }
 .g-signin2
@@ -86,9 +115,9 @@
 {
     background-color: #D62828;
     color: #FFFFFF;
-    height: 40px;
-    width: 180px;
-    margin-left: 70px;
+    height: 10%;
+    width: 85%;
+    margin: auto;
 }
 .signuplink
 {
@@ -128,12 +157,4 @@
     color: #14213D;
        
 }
-.loginTabs
-{
-    margin-left: 0px;
-}
-.mat-tab-group
-{
-    width: 320px;
-    margin-left: 95px;
-}
+
