--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,89 +1,98 @@
+<mat-toolbar>
+   
+  <h1 class="ayosgamit">Ayosgamit</h1>
+ 
+</mat-toolbar>
+
+<div>
+  <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+  </div>
+  
 <div class="container">
-  <mat-card class="logincard">
-    <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-    <div class="loginTabs">
-      <mat-tab-group>
-        <!-- ------------------------------------------------------------ -->
-        <mat-tab class="loginTab" label="Sign In">
 
-          <form [formGroup]="userForm" (ngSubmit)="onClickSubmit()">
+  
+  <mat-tab-group>
+    <!-- SIGNIN TAB------------------------------------------------------------ -->
+    <mat-tab class="loginTab" label="Sign In">
+     
+        <form [formGroup]="userForm" (ngSubmit)="onClickSubmit()">
 
-            <mat-form-field class="login-emailfield" appearance="outline">
-              <mat-label>Email Address</mat-label>
-              <input matInput formControlName="user_email" ngModel [email]="true" type="email"
-                placeholder="user@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{3}$">
-              <mat-error *ngIf="userForm.get('user_email').hasError('required')"> Email is required </mat-error>
-              <mat-error *ngIf="userForm.get('user_email').hasError('pattern')"> Please enter a valid email address
-              </mat-error>
-            </mat-form-field>
+          <mat-form-field class="login-emailfield" appearance="outline">
+            <mat-label>Email Address</mat-label>
+            <input matInput formControlName="user_email" ngModel [email]="true" type="email"
+              placeholder="user@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{3}$">
+            <mat-error *ngIf="userForm.get('user_email').hasError('required')"> Email is required </mat-error>
+            <mat-error *ngIf="userForm.get('user_email').hasError('pattern')"> Please enter a valid email address
+            </mat-error>
+          </mat-form-field>
 
-            <mat-form-field class="login-passfield" appearance="outline">
-              <mat-label>Password</mat-label>
-              <input matInput formControlName="user_password" placeholder="Enter password"
-                [type]="hide ? 'password' : 'text'">
-              <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}
-              </mat-icon>
-              <mat-error *ngIf="userForm.get('user_password').hasError('required')">Password is required</mat-error>
-              <mat-error *ngIf="userForm.get('user_password').hasError('minlength')">Password must have at least
-                {{minPw}} characters</mat-error>
-            </mat-form-field>
+          <mat-form-field class="login-passfield" appearance="outline">
+            <mat-label>Password</mat-label>
+            <input matInput formControlName="user_password" placeholder="Enter password"
+              [type]="hide ? 'password' : 'text'">
+            <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}
+            </mat-icon>
+            <mat-error *ngIf="userForm.get('user_password').hasError('required')">Password is required</mat-error>
+            <mat-error *ngIf="userForm.get('user_password').hasError('minlength')">Password must have at least
+              {{minPw}} characters</mat-error>
+          </mat-form-field>
 
-            <button mat-raised-button class="loginBtn" type="submit">Login</button>
-            <!-- <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true"></div> -->
-          </form>
-        </mat-tab>
+          <button mat-raised-button class="loginBtn" type="submit">Login</button>
+          <!-- <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true"></div> -->
+        </form>
+      </mat-tab>
 
-        <!-- ------------------------------------------------------------------------- -->
+    <!-- ------------------------------------------------------------------------- -->
 
-        <mat-tab class="signupTab" label="Sign Up">
-          <form [formGroup]="signupForm" (ngSubmit)="SignUpSubmit()">
+    <mat-tab class="signupTab" label="Sign Up">
+     
+      <form [formGroup]="signupForm" (ngSubmit)="SignUpSubmit()">
 
-            <mat-form-field class="signup-fnamefield" appearance="outline">
-              <mat-label>First Name</mat-label>
-              <input matInput formControlName="user_fname" type="text" ngModel placeholder="Enter first name" required>
-              <mat-error *ngIf="signupForm.get('user_fname').hasError('required')"> First name is required
-              </mat-error>
-              <mat-error *ngIf="signupForm.get('user_fname').hasError('pattern')"> Invalid Name</mat-error>
-              <mat-error *ngIf="signupForm.get('user_fname').hasError('maxlength')">Name contains maximum of 15
-                characters</mat-error>
-            </mat-form-field>
+        <mat-form-field class="signup-fnamefield" appearance="outline">
+          <mat-label>First Name</mat-label>
+          <input matInput formControlName="user_fname" type="text" ngModel placeholder="Enter first name" required>
+          <mat-error *ngIf="signupForm.get('user_fname').hasError('required')"> First name is required
+          </mat-error>
+          <mat-error *ngIf="signupForm.get('user_fname').hasError('pattern')"> Invalid Name</mat-error>
+          <mat-error *ngIf="signupForm.get('user_fname').hasError('maxlength')">Name contains maximum of 15
+            characters</mat-error>
+        </mat-form-field>
 
-            <mat-form-field class="signup-lnamefield" appearance="outline">
-              <mat-label>Last Name</mat-label>
-              <input matInput formControlName="user_lname" type="text" ngModel placeholder="Enter last name" required>
-              <mat-error *ngIf="signupForm.get('user_lname').hasError('required')"> Last name is required </mat-error>
-              <mat-error *ngIf="signupForm.get('user_lname').hasError('pattern')"> Invalid Name </mat-error>
-              <mat-error *ngIf="signupForm.get('user_lname').hasError('maxlength')">Name contains maximum of 15
-                characters</mat-error>
-            </mat-form-field>
+        <mat-form-field class="signup-lnamefield" appearance="outline">
+          <mat-label>Last Name</mat-label>
+          <input matInput formControlName="user_lname" type="text" ngModel placeholder="Enter last name" required>
+          <mat-error *ngIf="signupForm.get('user_lname').hasError('required')"> Last name is required </mat-error>
+          <mat-error *ngIf="signupForm.get('user_lname').hasError('pattern')"> Invalid Name </mat-error>
+          <mat-error *ngIf="signupForm.get('user_lname').hasError('maxlength')">Name contains maximum of 15
+            characters</mat-error>
+        </mat-form-field>
 
-            <mat-form-field class="signup-emailfield" appearance="outline">
-              <mat-label>Email Address</mat-label>
-              <input matInput formControlName="user_semail" [email]="true" type="email" ngModel
-                placeholder="yourname@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{3}$" autocomplete="off">
-              <mat-error *ngIf="signupForm.get('user_semail').hasError('required')"> Email is required </mat-error>
-              <mat-error *ngIf="signupForm.get('user_semail').hasError('pattern')"> Please enter a valid email address
-              </mat-error>
-            </mat-form-field>
+        <mat-form-field class="signup-emailfield" appearance="outline">
+          <mat-label>Email Address</mat-label>
+          <input matInput formControlName="user_semail" [email]="true" type="email" ngModel
+            placeholder="yourname@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{3}$" autocomplete="off">
+          <mat-error *ngIf="signupForm.get('user_semail').hasError('required')"> Email is required </mat-error>
+          <mat-error *ngIf="signupForm.get('user_semail').hasError('pattern')"> Please enter a valid email address
+          </mat-error>
+        </mat-form-field>
 
-            <mat-form-field class="signup-passfield" appearance="outline">
-              <mat-label>Password</mat-label>
-              <input matInput formControlName="user_spassword" type="password" ngModel placeholder="Enter password"
-                [type]="hide ? 'password' : 'text'" required autocomplete="off">
-              <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}
-              </mat-icon>
-              <mat-error *ngIf="signupForm.get('user_spassword').hasError('required')">Password is required</mat-error>
-              <mat-error *ngIf="signupForm.get('user_spassword').hasError('minlength')">Password must have at least
-                {{minPw}} characters</mat-error>
-              <mat-error *ngIf="signupForm.get('user_spassword').hasError('maxlength')">Password contains maximum of
-                {{maxPw}} characters</mat-error>
-            </mat-form-field>
+        <mat-form-field class="signup-passfield" appearance="outline">
+          <mat-label>Password</mat-label>
+          <input matInput formControlName="user_spassword" type="password" ngModel placeholder="Enter password"
+            [type]="hide ? 'password' : 'text'" required autocomplete="off">
+          <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}
+          </mat-icon>
+          <mat-error *ngIf="signupForm.get('user_spassword').hasError('required')">Password is required</mat-error>
+          <mat-error *ngIf="signupForm.get('user_spassword').hasError('minlength')">Password must have at least
+            {{minPw}} characters</mat-error>
+          <mat-error *ngIf="signupForm.get('user_spassword').hasError('maxlength')">Password contains maximum of
+            {{maxPw}} characters</mat-error>
+        </mat-form-field>
 
-            <button mat-raised-button type="submit" class="signupBtn">Signup</button>
-          </form>
+        <button mat-raised-button type="submit" class="signupBtn">Signup</button>
+      </form>
+        
 
-        </mat-tab>
-      </mat-tab-group>
-    </div>
-  </mat-card>
+    </mat-tab>
+  </mat-tab-group>
 </div>
