--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,3 +1,12 @@
+<mat-toolbar>
+  <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+    *ngIf="isHandset$ | async">
+    <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+  </button>
+  <h1 class="ayosgamit">Ayosgamit</h1>
+  <span class="spacer"></span>
+</mat-toolbar>
+
 <div class="container">
   <mat-card class="logincard">
     <img class="logo" mat-card-image src="../../assets/mainlogo.png">
