--- a/src/app/change-password/change-password.component.css
+++ b/src/app/change-password/change-password.component.css
@@ -138,32 +138,50 @@
   margin-left: 10px;
   color: #FFFFFF;
 }
-.editprofile{
-  width: 800px;
+.container
+{
+    width: fit-content;
+    height: 100%;
+    text-align: center;
+}
+.card{
+  width: 500px;
   height: fit-content;
-  margin-top: 30px;
-  margin-left: 30px;
+  margin: auto;
+  margin-top: 50px;
 }
-.text_icon{
-  position: relative;
-  top: 5px;
-  padding: 10px;
-  margin-top: 10px;
+.textfields
+{
+    min-height: 40px;
+    width: 300px;
+    margin-top: 10px;
+    margin-left: 10px;
 }
-.text-icon{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 22px;
-  padding: 10px;
-  margin-left: 10px;
-}
-.paper-label{
-  color: grey;
-}
-.editbtn{
-  width: 75px;
+.backBtn{
+  width: 90px;
   height: 40px;
+  margin-top: 10px;
+  font-size: 16px;
+  float: left;
+  background-color: #D62828;
+  color: #FFFFFF;
+}
+.saveBtn{
+  width: 140px;
+  height: 40px;
+  margin-top: 10px;
   font-size: 16px;
   float: right;
   color: #14213D;
   background-color: #FCA311;
 }
+.infoLbl
+{
+  font-size: 25px;
+  margin-top: 10px;
+  font-family: 'Trebuchet MS';
+}
+
+
+
+
