--- a/src/app/edit-address/edit-address.component.html
+++ b/src/app/edit-address/edit-address.component.html
@@ -14,12 +14,14 @@
           <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
         </mat-list-item>
       </div>
+
       <div class="bookingside">
         <mat-list-item (click)="closeSideNav()">
           <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
           <a class="booking-btn" routerLink="/booking">Book a Service</a>
         </mat-list-item>
       </div>
+
       <div class="profileside">
         <mat-list-item (click)="closeSideNav()">
           <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
@@ -44,68 +46,38 @@
       </button>
       <h1 class="ayosgamit">Ayosgamit</h1>
       <span class="spacer"></span>
-
-      <h2 class="welcome">Welcome, {{user_fname}}!</h2>
-
     </mat-toolbar>
-
     <div class="container">
-
-      <div>
-        <h1 class="dashtitle">Dashboard</h1>
+      <div class="card">
+        <h1 class="infoLbl">Edit Address</h1>
+        <p>
+          <mat-form-field class="textfields" appearance="outline">
+            <mat-label>Service Address</mat-label>
+            <input matInput [errorStateMatcher]="matcher" autocomplete="off">
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field class="textfields" appearance="outline">
+            <mat-label>Service Address Details</mat-label>
+            <input matInput [errorStateMatcher]="matcher" autocomplete="off">
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field class="textfields" appearance="outline">
+            <mat-label>Property Type</mat-label>
+            <mat-select [errorStateMatcher]="matcher">
+              <mat-option *ngFor="let ptype of property_type" [value]="ptype">
+                {{ptype}}
+              </mat-option>
+            </mat-select>
+            <!-- <mat-error *ngIf="locationForm.get('service_property_type').hasError('required')">
+                  You must make a selection
+                </mat-error> -->
+          </mat-form-field>
+        </p>
       </div>
-      <div class="datetime">
-        <label>{{date | date: "MMMM dd, yyyy "}}</label>
-        <label>({{date | date: "h:mm:a'"}})</label>
-      </div>
-
-
-      <div>
-        <img class="dashvector" mat-card-image src="../../assets/homebg1.png">
-      </div>
-
+      <button class="backBtn" mat-raised-button routerLink="/profile"> Back </button>
+      <button class="saveBtn" mat-raised-button> Save </button>
     </div>
-
-    <mat-tab-group class="tab">
-
-      <mat-tab label="Pending Requests">
-        <mat-card class="pendingcard">
-          <h2 class="request">Pending Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
-            <mat-label>
-              <mat-icon>find_in_page</mat-icon>Search..
-            </mat-label>
-            <input matInput>
-          </mat-form-field>
-        </mat-card>
-      </mat-tab>
-
-      <mat-tab label="Completed Requests">
-        <mat-card class="pendingcard">
-          <h2 class="request">Pending Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
-            <mat-label>
-              <mat-icon>find_in_page</mat-icon>Search..
-            </mat-label>
-            <input matInput>
-          </mat-form-field>
-
-        </mat-card>
-      </mat-tab>
-
-      <mat-tab label="Cancelled Requests">
-        <mat-card class="pendingcard">
-          <h2 class="request">Pending Requests</h2>
-          <mat-form-field class="searchfield" appearance="outline">
-            <mat-label>
-              <mat-icon>find_in_page</mat-icon>Search..
-            </mat-label>
-            <input matInput>
-          </mat-form-field>
-
-        </mat-card>
-      </mat-tab>
-    </mat-tab-group>
-
   </mat-sidenav-content>
 </mat-sidenav-container>
