--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,3 +1,4 @@
+<body>
 <mat-toolbar>
    
   <h1 class="ayosgamit">Ayosgamit</h1>
@@ -9,8 +10,6 @@
   </div>
   
 <div class="container">
-
-  
   <mat-tab-group>
     <!-- SIGNIN TAB------------------------------------------------------------ -->
     <mat-tab class="loginTab" label="Sign In">
@@ -94,4 +93,17 @@
 
     </mat-tab>
   </mat-tab-group>
+
+  <!-- <li *ngFor = "let item of items">
+    Id: {{item._id}} <br>
+    Name: {{item.first_name}} {{item.last_name}} <br>
+    Email: {{item.email}} <br>
+    Password: {{item.password}} <br>
+    Number: {{item.number}} <br>
+    Service Address: {{item.service_address}} <br>
+    Service Address Details: {{item.service_addressDetails}} <br>
+    Property Type: {{item.property_type}} <br>
+    Created Date: {{item.createdDate | date:'medium' }} <br>
+  </li> -->
 </div>
+</body>
