--- a/src/app/electricfandetails/electricfandetails.component.html
+++ b/src/app/electricfandetails/electricfandetails.component.html
@@ -112,8 +112,7 @@
 
             <!--Back and Next Button-->
             <button class="nextBtn" type="submit" [disabled]="!unitdetailsForm.valid" mat-button
-              matStepperNext>Next</button><br><br><br><br>
-            <br><br>
+              matStepperNext>Next</button>
           </form>
         </div>
       </mat-step>
