--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -80,17 +80,28 @@
     margin-top: 80px;
 }
 
+.menuBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 80px;
+}
+
 .bookBtn
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #FFFFFF;
     color: #D62828;
+    text-decoration: none !important;
+    border-radius: 3px;
     float: left;
     margin-left: -490px;
     margin-top: 450px;
     font-size: 15px;
 }
-
 .inquireBtn
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -100,6 +111,14 @@
     margin-left: -350px;
     margin-top: 450px;
     font-size: 15px;
+}
+.footer
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    background-color: #D62828;
+    color: whitesmoke;
+    text-align: center;
 }
 }
 
@@ -205,5 +224,13 @@
         margin-left: 10px;
         margin-top: 20px;
         font-size: 12px;
+    }
+    .footer
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-color: #D62828;
+        color: whitesmoke;
+        text-align: center;
     }
 }
