--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,20 +1,32 @@
 <body>
-
-  <div>
-      <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-  </div>
-  <div>
-      <button mat-button class="pricingBtn">Pricing</button>
-      <button mat-button class="contactUsBtn">Contact Us</button>
-      <button mat-button class="aboutusBtn">About Us</button>
-  </div>
-  <div class="content">
-      <h1 class="title1"><b>We provide the service</b></h1>
-      <h1 class="title2"><b>you need on your own home.</b></h1>
-  </div>
-
-  <div>
-      <button mat-raised-button class="bookBtn" routerLink="/loginform">Book a Service</button>
-      <button mat-raised-button class="inquireBtn">Inquire</button>
-  </div>
-</body>
+    <div>
+        <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+    </div>
+    <div>
+      <button mat-button class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+            <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+            <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+            <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+            <button mat-menu-item routerLink="/menu_tv">Television</button>
+          </mat-menu>
+    </div>      
+    <div>
+        <button mat-button class="pricingBtn">Pricing</button>
+        <button mat-button class="contactUsBtn" routerLink="/contact_us">Contact Us</button>
+        <button mat-button class="aboutusBtn" routerLink="/about_us">About Us</button>
+    </div>
+    <div class="content">
+        <h1 class="title1"><b>We provide the service</b></h1>
+        <h1 class="title2"><b>you need on your own home.</b></h1>
+    </div>
+  
+    <div>
+      
+        <button mat-raised-button class="inquireBtn">Inquire</button>
+        <button mat-raised-button class="bookBtn" routerLink="/login">Book a service</button>
+    </div>
+  </body>
+  <footer class="footer">© 2021 Ayosgamit - All Rights Reserved</footer>
+  
