--- a/src/app/loginform/loginform.component.css
+++ b/src/app/loginform/loginform.component.css
@@ -1,3 +1,13 @@
+/* body
+    {
+        background-image: url('../../assets/homebg.jpg');
+        background-size: cover;
+        text-align: center;
+        width: 100%;
+        height: 100vh;
+        background-attachment: fixed;
+    } */
+
 .mat-toolbar{
     background-color: #D62828;
     width: 100%;
