--- a/src/app/addtech/addtech.component.css
+++ b/src/app/addtech/addtech.component.css
@@ -103,6 +103,30 @@
     font-size: 18px;
     margin-left: 25px;
   }
+  .logoutside{
+    margin-left: 0px;
+    margin-top: 30px;
+    text-align: justify;
+  }
+  
+  .logoutside:hover
+  {
+      background-color: #c8c19c;
+      
+      width: 100%;
+      height: 70px;
+      margin-left: 0;
+      margin-top: 20px;
+      text-align: justify;
+  }
+  
+  .logout-btn
+  {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 25px;
+  }
   .spacer{
     flex: 1 1 auto;
   }
