--- a/src/app/confirmcancel/confirmcancel.component.html
+++ b/src/app/confirmcancel/confirmcancel.component.html
@@ -1,9 +1,13 @@
-<div class="cancel">
-
-
-        <h1 class="cancelLbl">Are you sure you want to cancel your booking?</h1>
-        <button class="yes" mat-raised-button>Yes</button>
-        <button class="no"mat-raised-button><a class="nolink" routerLink="/dashboard">No</a></button>
-   
-
+<div class="header">
+        <h2 mat-dialog-title>Title</h2>
+        <button mat-icon-button [mat-dialog-close]="false">
+                <mat-icon>close</mat-icon>
+        </button>
+</div>
+<div mat-dialog-content>
+        Are you sure you want to do this?
+</div>
+<div mat-dialog-actions [align]="'end'">
+        <button mat-raised-button [mat-dialog-close]="false">No</button>
+        <button mat-raised-button color="primary" [mat-dialog-close]="true">Yes</button>
 </div>
